--- a/EzeeRide2pg/.gitignore
+++ b/EzeeRide2pg/.gitignore
@@ -1,10 +1,19 @@
-HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+.kotlin
 
-### STS ###
+### IntelliJ IDEA ###
+.idea/modules.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/libraries/
+*.iws
+*.iml
+*.ipr
+
+### Eclipse ###
 .apt_generated
 .classpath
 .factorypath
@@ -12,12 +21,6 @@ target/
 .settings
 .springBeans
 .sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
 
 ### NetBeans ###
 /nbproject/private/
@@ -32,6 +35,5 @@ build/
 ### VS Code ###
 .vscode/
 
-#src/main/resources/application.properties
-.env
-src/main/resources/application-dev.properties
+### Mac OS ###
+.DS_Store
