--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-spring.application.name=EzeeRide2
+spring.application.name=EzeeRide2pg
 
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 #spring.security.user.name=ved
@@ -14,6 +14,9 @@ spring.jpa.show-sql=true
 
 
 spring.jackson.mapper.accept-case-insensitive-enums=true
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
