--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ build/
 #src/main/resources/application.properties
 .env
 src/main/resources/application-dev.properties
+src/main/java/com/project/controllers/EmailTestController
