--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,13 @@
 <!--            <version>2.2.4</version>-->
 <!--        </dependency>-->
 
+        <dependency>
+            <groupId>com.sendgrid</groupId>
+            <artifactId>sendgrid-java</artifactId>
+            <version>4.10.2</version>
+        </dependency>
+
+
     </dependencies>
 
 	<build>
