--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,14 +18,16 @@ spring.jackson.mapper.accept-case-insensitive-enums=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=${SMTP_USERNAME}
-spring.mail.password=${SMTP_PASSWORD}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=${SMTP_USERNAME}
+#spring.mail.password=${SMTP_PASSWORD}
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
 
+email.from=${EMAIL_FROM}
+sendgrid.key=${SENDGRID_API_KEY}
